# gnome-extensions-cli

./: .envrc  .flake8  .gitignore  Justfile  Makefile  README.md  poetry.toml  pyproject.toml  release.sh  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: poetry.yml
gnome_extensions_cli/: __init__.py  cli.py  dbus.py  filesystem.py  icons.py  manager.py  schema.py  store.py  utils.py
gnome_extensions_cli/commands/: disable.py  enable.py  install.py  list_.py  preferences.py  search.py  show.py  uninstall.py  update.py
src/gnome_extensions_cli/: __main__.py  cli.py  manager.py  model.py  utils.py  version.py
src/gnome_extensions_cli/gnome_extensions_cli_tests/: test_model.py
src/gnome_extensions_cli_tests/: test_backend_file.py  test_model.py
tests/: test_backend_file.py  test_cli.py  test_dbus.py  test_filesystem.py  test_model.py  test_store.py
tests/samples/: available-alt.json  available.json  installed.json  search.json
