[tool.poetry]
name = "gnome-extensions-cli"
version = "0.9.5"
description = "Command line tool to manage your Gnome Shell extensions"
homepage = "https://github.com/essembeh/gnome-extensions-cli"
authors = ["Sébastien MB <seb@essembeh.org>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.5"
pydantic = "^1.10.4"
more-itertools = "^9.0.0"
requests = "^2.28.1"
packaging = "^23.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pylint = "^2.15.3"
pytest = "^7.1.3"
pytest-dotenv = "^0.5.2"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
gnome-extensions-cli = "gnome_extensions_cli.cli:run"
gext = "gnome_extensions_cli.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
