[tool.poetry]
name = "gnome-extensions-cli"
version = "0.10.0"
description = "Command line tool to manage your Gnome Shell extensions"
homepage = "https://github.com/essembeh/gnome-extensions-cli"
authors = ["Sébastien MB <seb@essembeh.org>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.5"
pydantic = "^2.3.0"
requests = "^2.28.1"
packaging = "^23.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pylint = "^3.0.3"
pytest = "^7.1.3"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
gnome-extensions-cli = "gnome_extensions_cli.cli:run"
gext = "gnome_extensions_cli.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
